--- a/package.json
+++ b/package.json
@@ -87,6 +87,8 @@
   "dependencies": {
     "@angular/animations": "^8.2.6",
     "@angular/cdk": "^8.2.0",
-    "@angular/material": "^8.2.0"
+    "@angular/material": "^8.2.0",
+    "ng2-pdfjs-viewer": "^5.0.1",
+    "pdf-lib": "^1.0.1"
   }
 }
