Fix build issues
- Update ts and ts-node

--- a/tsconfig-serve.json
+++ b/tsconfig-serve.json
@@ -1,4 +1,7 @@
 {
+  "angularCompilerOptions": {
+    "disableTypeScriptVersionCheck": true
+  },
   "compilerOptions": {
     "sourceMap": true,
     "declaration": false,
